syntax = "proto3";

package proto;

import "proto/google/api/annotations.proto";
import "proto/google/api/httpBody.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option go_package = "./";
//option java_package = "./proto";

service ProductService{
  rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
  };
  rpc AddProduct(AddProductRequest) returns (AddProductResponse) {
    option (google.api.http) = {
      post: "/v1/products/add"
      body: "*"
    };
  };
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/v1/products/{id}"
    };
  };
}

message GetAllProductsRequest{}

message GetProductRequest{
  string id=1;
}

message  GetAllProductsResponse {
  string status=1;
  repeated AddProductResponse products=2;
}

message AddProductRequest {
  string product_name=1;
  string description=2;
  string price=3;
}

message AddProductResponse {
  string id=1;
  string product_name=2;
  string description=3;
  string price=4;
}

message GetProductResponse {
  string id=1;
  string product_name=2;
  string description=3;
  string price=4;
}